<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.austin.democracynow.HomeScreen">

    <Button
        android:id="@+id/upcomingVotesBttn"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:text="@string/votesBttn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/registrationBttn"/>
    <Button
        android:id="@+id/registrationBttn"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:text="@string/registrationBttn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/myInfoBttn"/>
    <Button
        android:id="@+id/myInfoBttn"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:text="@string/myInfoBttn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrationBttn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <Button
        android:id="@+id/preferencesBttn"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:text="@string/preferencesBttn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myInfoBttn"/>

</android.support.constraint.ConstraintLayout>
